--- a/.github/workflows/enigma-expander.yml
+++ b/.github/workflows/enigma-expander.yml
@@ -1,4 +1,4 @@
-name: "🧱 Enigma Bulk Folder & Disk Expander (Worktree-Safe)"
+name: "🧱 Enigma Bulk Folder & Disk Expander (Worktree-Safe + Cron + Daemon + AutoMount)"
 
 on:
   workflow_dispatch:
@@ -32,13 +32,22 @@ on:
         required: true
         default: "true"
       extra_disk_device:
-        description: "셀프호스트 러너 전용: 추가 디스크 장치 경로 (예: /dev/sdb)"
+        description: "셀프호스트 러너 전용: 추가 디스크 장치 경로 (예: /dev/sdb) — 비어있으면 loopback 가상디스크 생성"
         required: false
         default: ""
       commit_message:
         description: "커밋 메시지"
         required: true
         default: "chore(enigma): bulk dir expansion + disk prep"
+      daemon_profile:
+        description: "상주배치 모드 (off|fast|normal|slow)"
+        required: true
+        default: "off"
+
+  schedule:
+    - cron: "*/5 * * * *"   # 5분마다
+    - cron: "*/10 * * * *"  # 10분마다
+    - cron: "*/15 * * * *"  # 15분마다
 
 permissions:
   contents: write
@@ -62,6 +71,7 @@ jobs:
       USE_WORKTREE: ${{ github.event.inputs.use_worktree_on_mnt }}
       EXTRA_DISK_DEVICE: ${{ github.event.inputs.extra_disk_device }}
       COMMIT_MSG: ${{ github.event.inputs.commit_message }}
+      DAEMON_PROFILE: ${{ github.event.inputs.daemon_profile }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -93,26 +103,42 @@ jobs:
           rm -rf ~/.cache || true
           echo "[RECLAIM] Done"; df -h | sed 's/^/[DF1] /'
 
-      - name: Optional:mount extra disk (self-hosted only)
-        if: ${{ env.EXTRA_DISK_DEVICE != '' }}
+      - name: Ensure mount tools
         run: |
           set -Eeuo pipefail
-          DEV="${EXTRA_DISK_DEVICE}"
-          echo "[EXTRA] device: $DEV"
-          if [ -b "$DEV" ]; then
+          sudo apt-get update
+          sudo apt-get install -y tree parted util-linux e2fsprogs
+
+      - name: Disk mount (Self-hosted device or Loopback fallback — 반드시 마운트)
+        run: |
+          set -Eeuo pipefail
+          TARGET="/mnt/enigma-extra"
+          DEV="${EXTRA_DISK_DEVICE:-}"
+          LOOP_SIZE_GB="${LOOP_SIZE_GB:-8}"   # 입력 없이도 기본 8G loopback 생성
+
+          if [ -n "$DEV" ] && [ -b "$DEV" ]; then
+            echo "[MOUNT] Using physical device: $DEV"
             sudo parted -s "$DEV" mklabel gpt || true
             sudo parted -s "$DEV" mkpart primary ext4 0% 100% || true
-            PART="$(lsblk -no PATH "$DEV" | tail -n1)1"
-            [ -b "$PART" ] || PART="${DEV}1"
+            PART="$(lsblk -no PATH "$DEV" | tail -n1)1"; [ -b "$PART" ] || PART="${DEV}1"
             sudo mkfs.ext4 -F "$PART"
-            sudo mkdir -p /mnt/enigma-extra
-            sudo mount "$PART" /mnt/enigma-extra
-            sudo chown -R "$USER:$USER" /mnt/enigma-extra
-            echo "[EXTRA] mounted at /mnt/enigma-extra"
-            df -h | sed 's/^/[DFX] /'
+            sudo mkdir -p "$TARGET"
+            sudo mount "$PART" "$TARGET"
+            sudo chown -R "$USER:$USER" "$TARGET"
           else
-            echo "[EXTRA][WARN] Not a block device: $DEV"
+            echo "[MOUNT] No physical device. Creating loopback disk ${LOOP_SIZE_GB}G"
+            IMG="/mnt/enigma-extra.img"
+            sudo fallocate -l "${LOOP_SIZE_GB}G" "$IMG" || sudo dd if=/dev/zero of="$IMG" bs=1M count=$((LOOP_SIZE_GB*1024))
+            LOOP="$(sudo losetup -f --show "$IMG")"
+            echo "[MOUNT] Loop device: $LOOP"
+            sudo mkfs.ext4 -F "$LOOP"
+            sudo mkdir -p "$TARGET"
+            sudo mount "$LOOP" "$TARGET"
+            sudo chown -R "$USER:$USER" "$TARGET"
           fi
+
+          echo "[MOUNT] Mounted at $TARGET"
+          df -hT "$TARGET" | sed 's/^/[MNT] /'
 
       - name: Prepare worktree on /mnt (충돌 안전)
         id: workdir
@@ -133,22 +159,18 @@ jobs:
             sudo mkdir -p "$WTDIR"
             sudo chown -R "$USER:$USER" "$WTDIR"
 
-            # 브랜치 사용 여부 확인
             IN_USE="$(git worktree list --porcelain | sed -n 's/^branch //p' | grep -cx "refs/heads/$BR" || true)"
+            git fetch --all --prune
+
             if [ "$IN_USE" != "0" ]; then
-              echo "[WT] Branch '$BR' already used in another worktree; create temp branch: $WTBR"
-              # 원본 브랜치에서 임시 브랜치 강제 생성/갱신
-              git fetch --all --prune
+              echo "[WT] Branch '$BR' in use; create temp branch: $WTBR"
               git branch -f "$WTBR" "$BR"
-              # 임시 브랜치로 worktree 생성
               git worktree add "$WTDIR" "$WTBR"
               echo "worktree_branch=$WTBR" >> "$GITHUB_OUTPUT"
             else
-              # 원 브랜치로 worktree 생성 가능
               git worktree add "$WTDIR" "$BR"
               echo "worktree_branch=$BR" >> "$GITHUB_OUTPUT"
             fi
-
             WORKDIR="$WTDIR"
           else
             echo "[WT] Disabled; use current workspace"
@@ -156,13 +178,7 @@ jobs:
           fi
 
           echo "workdir=$WORKDIR" >> "$GITHUB_OUTPUT"
-          echo "[WT] Workdir: $WORKDIR (branch: $(cat $GITHUB_OUTPUT | sed -n 's/^worktree_branch=//p'))"
-
-      - name: Ensure dependencies (tree)
-        run: |
-          set -Eeuo pipefail
-          sudo apt-get update
-          sudo apt-get install -y tree
+          echo "[WT] Workdir: $WORKDIR (branch: $(sed -n 's/^worktree_branch=//p' "$GITHUB_OUTPUT"))"
 
       - name: Generate enigma_expand.sh (no-heredoc)
         run: |
@@ -216,66 +232,54 @@ jobs:
           } > scripts/enigma_expand.sh
           chmod +x scripts/enigma_expand.sh
 
-      - name: Run bulk creator (in workdir)
+      - name: One-shot run (한 번 실행)
         run: |
           set -Eeuo pipefail
           WDIR="${{ steps.workdir.outputs.workdir }}"
           cd "$WDIR"
-          echo "[RUN] $(pwd)/scripts/enigma_expand.sh"
-          BASE_PATH="$BASE_PATH" TOTAL_DIRS="$TOTAL_DIRS" DEPTH="$DEPTH" FANOUT="$FANOUT" FILES_PER_DIR="$FILES_PER_DIR" \
-            REPORT_DIR="site/reports" LOG_DIR=".github/echo_enigma/logs" ./scripts/enigma_expand.sh
+          echo "[RUN][ONESHOT] $(pwd)/scripts/enigma_expand.sh"
+          BASE_PATH="${BASE_PATH:-.github/echo_enigma}" TOTAL_DIRS="${TOTAL_DIRS:-500}" DEPTH="${DEPTH:-3}" \
+          FANOUT="${FANOUT:-5}" FILES_PER_DIR="${FILES_PER_DIR:-1}" \
+          REPORT_DIR="site/reports" LOG_DIR=".github/echo_enigma/logs" ./scripts/enigma_expand.sh
 
-      - name: Commit in workdir
-        id: commit
+      - name: Commit & push (one-shot)
+        id: commit_once
         run: |
           set -Eeuo pipefail
           WDIR="${{ steps.workdir.outputs.workdir }}"
           WTBR="${{ steps.workdir.outputs.worktree_branch }}"
           cd "$WDIR"
-
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
           if git diff --cached --quiet; then
-            echo "[GIT] No changes to commit."
             echo "committed=false" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-
-          echo "[GIT] Committing on $WTBR ..."
           git commit -m "$COMMIT_MSG"
+          git push origin "HEAD:$WTBR"
           echo "committed=true" >> "$GITHUB_OUTPUT"
 
-          # 임시 브랜치면 동일 브랜치로 push, 아니면 현재 브랜치로 push
-          echo "[GIT] Pushing branch $WTBR ..."
-          git push origin "HEAD:$WTBR"
-
       - name: Merge to base branch (FF → rebase → PR)
-        if: steps.commit.outputs.committed == 'true'
+        if: steps.commit_once.outputs.committed == 'true'
         run: |
           set -Eeuo pipefail
           BASE="${{ steps.workdir.outputs.base_branch }}"
           WTBR="${{ steps.workdir.outputs.worktree_branch }}"
-
           echo "[MERGE] Base=$BASE, From=$WTBR"
           cd "$GITHUB_WORKSPACE"
           git fetch origin "$BASE" "$WTBR" --prune
           git checkout "$BASE"
           git pull --ff-only origin "$BASE" || true
-
-          # 1) FF merge 시도
           if git merge --ff-only "origin/$WTBR"; then
-            echo "[MERGE] Fast-forward OK"
             git push origin "$BASE"
           else
             echo "[MERGE] FF failed, trying rebase ..."
             git rebase "origin/$WTBR" || REBASE_FAIL=1
             if [ "${REBASE_FAIL:-0}" = "1" ]; then
-              echo "[MERGE] Rebase failed, creating PR from $WTBR to $BASE"
               NEWBR="enigma/${{ github.run_id }}-${{ github.run_attempt }}"
               git checkout -b "$NEWBR" "origin/$WTBR"
               git push -u origin "$NEWBR"
-              # gh 사용해 PR 생성 (있으면 스킵)
               if command -v gh >/dev/null 2>&1; then
                 gh pr create --base "$BASE" --head "$NEWBR" \
                   --title "Enigma bulk expansion (run ${{ github.run_id }})" \
@@ -284,10 +288,57 @@ jobs:
                 echo "[PR][WARN] gh CLI not found; pushed branch $NEWBR"
               fi
             else
-              echo "[MERGE] Rebase OK"
               git push origin "$BASE"
             fi
           fi
+
+      - name: Resident-batch (daemon mode; 6h 러너 한도 내 반복)
+        if: ${{ env.DAEMON_PROFILE != 'off' }}
+        run: |
+          set -Eeuo pipefail
+          WDIR="${{ steps.workdir.outputs.workdir }}"
+          WTBR="${{ steps.workdir.outputs.worktree_branch }}"
+          BASE="${{ steps.workdir.outputs.base_branch }}"
+          cd "$WDIR"
+
+          # 프로파일 → (interval, duration)
+          case "${DAEMON_PROFILE:-normal}" in
+            fast)   INTERVAL=60;   DURATION_MIN=60 ;;   # 1분 간격 / 1시간
+            normal) INTERVAL=300;  DURATION_MIN=180 ;;  # 5분 간격 / 3시간
+            slow)   INTERVAL=900;  DURATION_MIN=360 ;;  # 15분 간격 / 6시간
+            *)      INTERVAL=300;  DURATION_MIN=180 ;;  # fallback
+          esac
+
+          echo "[DAEMON] profile=$DAEMON_PROFILE interval=$INTERVAL sec duration=$DURATION_MIN min"
+          END_AT=$(( $(date +%s) + DURATION_MIN*60 ))
+          iter=0
+
+          while [ "$(date +%s)" -lt "$END_AT" ]; do
+            iter=$((iter+1))
+            echo "[DAEMON][$iter] run expand + push"
+            BASE_PATH="${BASE_PATH:-.github/echo_enigma}" TOTAL_DIRS="${TOTAL_DIRS:-500}" DEPTH="${DEPTH:-3}" \
+            FANOUT="${FANOUT:-5}" FILES_PER_DIR="${FILES_PER_DIR:-1}" \
+            REPORT_DIR="site/reports" LOG_DIR=".github/echo_enigma/logs" ./scripts/enigma_expand.sh
+
+            git add -A
+            if git diff --cached --quiet; then
+              echo "[DAEMON][$iter] no changes"
+            else
+              git -c user.name="github-actions[bot]" -c user.email="github-actions[bot]@users.noreply.github.com" \
+                  commit -m "$COMMIT_MSG [daemon#$iter]"
+              git push origin "HEAD:$WTBR" || true
+              # base fast-forward 시도 (best-effort)
+              cd "$GITHUB_WORKSPACE"
+              git fetch origin "$BASE" "$WTBR" --prune
+              git checkout "$BASE"
+              git pull --ff-only origin "$BASE" || true
+              git merge --ff-only "origin/$WTBR" && git push origin "$BASE" || true
+              cd "$WDIR"
+            fi
+
+            sleep "$INTERVAL"
+          done
+          echo "[DAEMON] finished"
 
       - name: Cleanup worktree & temp branch
         if: always()
@@ -297,13 +348,10 @@ jobs:
           WTBR="${{ steps.workdir.outputs.worktree_branch }}"
           BASE="${{ steps.workdir.outputs.base_branch }}"
 
-          # worktree 제거(있을 때만)
-          if [ -d "$WTDIR/.git" ] || [ -d "$WTDIR" ]; then
+          if [ -d "$WTDIR" ]; then
             echo "[CLEAN] Removing worktree $WTDIR"
             git worktree remove -f "$WTDIR" || true
           fi
-
-          # 임시 브랜치 정리
           if [ "$WTBR" != "$BASE" ]; then
             echo "[CLEAN] Deleting temp branch $WTBR (local)"
             git branch -D "$WTBR" || true
@@ -311,13 +359,13 @@ jobs:
             git push origin --delete "$WTBR" || true
           fi
 
-      - name: Show disk after
+      - name: Show disk/mount after
         if: always()
         run: |
           echo "[DISK][AFTER]"; df -hT | sed 's/^/[DF] /' || true
-          echo "[MEM]"; free -h || true
+          mount | grep enigma || true
 
-      - name: Upload reports
+      - name: Upload reports/artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
